seaqt/QtQml/gen_qjsmanagedvalue.nim

import ./Qt6Qml_libs

{.push raises: [].}

from system/ansi_c import c_free, c_malloc

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config --cflags Qt6Qml")  & " -fPIC"
{.compile("gen_qjsmanagedvalue.cpp", cflags).}


type QJSManagedValueTypeEnum* = distinct cint
template Undefined*(_: type QJSManagedValueTypeEnum): untyped = 0
template Boolean*(_: type QJSManagedValueTypeEnum): untyped = 1
template Number*(_: type QJSManagedValueTypeEnum): untyped = 2
template String*(_: type QJSManagedValueTypeEnum): untyped = 3
template Object*(_: type QJSManagedValueTypeEnum): untyped = 4
template Symbol*(_: type QJSManagedValueTypeEnum): untyped = 5
template Function*(_: type QJSManagedValueTypeEnum): untyped = 6


import ./gen_qjsmanagedvalue_types
export gen_qjsmanagedvalue_types

import
  ../QtCore/gen_qdatetime_types,
  ../QtCore/gen_qobject_types,
  ../QtCore/gen_qobjectdefs_types,
  ../QtCore/gen_qregularexpression_types,
  ../QtCore/gen_qurl_types,
  ../QtCore/gen_qvariant_types,
  ./gen_qjsengine_types,
  ./gen_qjsprimitivevalue_types,
  ./gen_qjsvalue_types
export
  gen_qdatetime_types,
  gen_qobject_types,
  gen_qobjectdefs_types,
  gen_qregularexpression_types,
  gen_qurl_types,
  gen_qvariant_types,
  gen_qjsengine_types,
  gen_qjsprimitivevalue_types,
  gen_qjsvalue_types

type cQJSManagedValue*{.exportc: "QJSManagedValue", incompleteStruct.} = object

proc fcQJSManagedValue_equals(self: pointer, other: pointer): bool {.importc: "QJSManagedValue_equals".}
proc fcQJSManagedValue_strictlyEquals(self: pointer, other: pointer): bool {.importc: "QJSManagedValue_strictlyEquals".}
proc fcQJSManagedValue_engine(self: pointer, ): pointer {.importc: "QJSManagedValue_engine".}
proc fcQJSManagedValue_prototype(self: pointer, ): pointer {.importc: "QJSManagedValue_prototype".}
proc fcQJSManagedValue_setPrototype(self: pointer, prototype: pointer): void {.importc: "QJSManagedValue_setPrototype".}
proc fcQJSManagedValue_typeX(self: pointer, ): cint {.importc: "QJSManagedValue_type".}
proc fcQJSManagedValue_isUndefined(self: pointer, ): bool {.importc: "QJSManagedValue_isUndefined".}
proc fcQJSManagedValue_isBoolean(self: pointer, ): bool {.importc: "QJSManagedValue_isBoolean".}
proc fcQJSManagedValue_isNumber(self: pointer, ): bool {.importc: "QJSManagedValue_isNumber".}
proc fcQJSManagedValue_isString(self: pointer, ): bool {.importc: "QJSManagedValue_isString".}
proc fcQJSManagedValue_isObject(self: pointer, ): bool {.importc: "QJSManagedValue_isObject".}
proc fcQJSManagedValue_isSymbol(self: pointer, ): bool {.importc: "QJSManagedValue_isSymbol".}
proc fcQJSManagedValue_isFunction(self: pointer, ): bool {.importc: "QJSManagedValue_isFunction".}
proc fcQJSManagedValue_isInteger(self: pointer, ): bool {.importc: "QJSManagedValue_isInteger".}
proc fcQJSManagedValue_isNull(self: pointer, ): bool {.importc: "QJSManagedValue_isNull".}
proc fcQJSManagedValue_isRegularExpression(self: pointer, ): bool {.importc: "QJSManagedValue_isRegularExpression".}
proc fcQJSManagedValue_isArray(self: pointer, ): bool {.importc: "QJSManagedValue_isArray".}
proc fcQJSManagedValue_isUrl(self: pointer, ): bool {.importc: "QJSManagedValue_isUrl".}
proc fcQJSManagedValue_isVariant(self: pointer, ): bool {.importc: "QJSManagedValue_isVariant".}
proc fcQJSManagedValue_isQObject(self: pointer, ): bool {.importc: "QJSManagedValue_isQObject".}
proc fcQJSManagedValue_isQMetaObject(self: pointer, ): bool {.importc: "QJSManagedValue_isQMetaObject".}
proc fcQJSManagedValue_isDate(self: pointer, ): bool {.importc: "QJSManagedValue_isDate".}
proc fcQJSManagedValue_isError(self: pointer, ): bool {.importc: "QJSManagedValue_isError".}
proc fcQJSManagedValue_isJsMetaType(self: pointer, ): bool {.importc: "QJSManagedValue_isJsMetaType".}
proc fcQJSManagedValue_toString(self: pointer, ): struct_miqt_string {.importc: "QJSManagedValue_toString".}
proc fcQJSManagedValue_toNumber(self: pointer, ): float64 {.importc: "QJSManagedValue_toNumber".}
proc fcQJSManagedValue_toBoolean(self: pointer, ): bool {.importc: "QJSManagedValue_toBoolean".}
proc fcQJSManagedValue_toPrimitive(self: pointer, ): pointer {.importc: "QJSManagedValue_toPrimitive".}
proc fcQJSManagedValue_toJSValue(self: pointer, ): pointer {.importc: "QJSManagedValue_toJSValue".}
proc fcQJSManagedValue_toVariant(self: pointer, ): pointer {.importc: "QJSManagedValue_toVariant".}
proc fcQJSManagedValue_toInteger(self: pointer, ): cint {.importc: "QJSManagedValue_toInteger".}
proc fcQJSManagedValue_toRegularExpression(self: pointer, ): pointer {.importc: "QJSManagedValue_toRegularExpression".}
proc fcQJSManagedValue_toUrl(self: pointer, ): pointer {.importc: "QJSManagedValue_toUrl".}
proc fcQJSManagedValue_toQObject(self: pointer, ): pointer {.importc: "QJSManagedValue_toQObject".}
proc fcQJSManagedValue_toQMetaObject(self: pointer, ): pointer {.importc: "QJSManagedValue_toQMetaObject".}
proc fcQJSManagedValue_toDateTime(self: pointer, ): pointer {.importc: "QJSManagedValue_toDateTime".}
proc fcQJSManagedValue_hasProperty(self: pointer, name: struct_miqt_string): bool {.importc: "QJSManagedValue_hasProperty".}
proc fcQJSManagedValue_hasOwnProperty(self: pointer, name: struct_miqt_string): bool {.importc: "QJSManagedValue_hasOwnProperty".}
proc fcQJSManagedValue_property(self: pointer, name: struct_miqt_string): pointer {.importc: "QJSManagedValue_property".}
proc fcQJSManagedValue_setProperty(self: pointer, name: struct_miqt_string, value: pointer): void {.importc: "QJSManagedValue_setProperty".}
proc fcQJSManagedValue_deleteProperty(self: pointer, name: struct_miqt_string): bool {.importc: "QJSManagedValue_deleteProperty".}
proc fcQJSManagedValue_hasPropertyWithArrayIndex(self: pointer, arrayIndex: cuint): bool {.importc: "QJSManagedValue_hasPropertyWithArrayIndex".}
proc fcQJSManagedValue_hasOwnPropertyWithArrayIndex(self: pointer, arrayIndex: cuint): bool {.importc: "QJSManagedValue_hasOwnPropertyWithArrayIndex".}
proc fcQJSManagedValue_propertyWithArrayIndex(self: pointer, arrayIndex: cuint): pointer {.importc: "QJSManagedValue_propertyWithArrayIndex".}
proc fcQJSManagedValue_setProperty2(self: pointer, arrayIndex: cuint, value: pointer): void {.importc: "QJSManagedValue_setProperty2".}
proc fcQJSManagedValue_deletePropertyWithArrayIndex(self: pointer, arrayIndex: cuint): bool {.importc: "QJSManagedValue_deletePropertyWithArrayIndex".}
proc fcQJSManagedValue_call(self: pointer, ): pointer {.importc: "QJSManagedValue_call".}
proc fcQJSManagedValue_callWithInstance(self: pointer, instance: pointer): pointer {.importc: "QJSManagedValue_callWithInstance".}
proc fcQJSManagedValue_callAsConstructor(self: pointer, ): pointer {.importc: "QJSManagedValue_callAsConstructor".}
proc fcQJSManagedValue_jsMetaType(self: pointer, ): pointer {.importc: "QJSManagedValue_jsMetaType".}
proc fcQJSManagedValue_jsMetaMembers(self: pointer, ): struct_miqt_array {.importc: "QJSManagedValue_jsMetaMembers".}
proc fcQJSManagedValue_jsMetaInstantiate(self: pointer, ): pointer {.importc: "QJSManagedValue_jsMetaInstantiate".}
proc fcQJSManagedValue_call1(self: pointer, arguments: struct_miqt_array): pointer {.importc: "QJSManagedValue_call1".}
proc fcQJSManagedValue_callWithInstance2(self: pointer, instance: pointer, arguments: struct_miqt_array): pointer {.importc: "QJSManagedValue_callWithInstance2".}
proc fcQJSManagedValue_callAsConstructor1(self: pointer, arguments: struct_miqt_array): pointer {.importc: "QJSManagedValue_callAsConstructor1".}
proc fcQJSManagedValue_jsMetaInstantiate1(self: pointer, values: struct_miqt_array): pointer {.importc: "QJSManagedValue_jsMetaInstantiate1".}
proc fcQJSManagedValue_new(): ptr cQJSManagedValue {.importc: "QJSManagedValue_new".}
proc fcQJSManagedValue_new2(value: pointer, engine: pointer): ptr cQJSManagedValue {.importc: "QJSManagedValue_new2".}
proc fcQJSManagedValue_new3(value: pointer, engine: pointer): ptr cQJSManagedValue {.importc: "QJSManagedValue_new3".}
proc fcQJSManagedValue_new4(variant: pointer, engine: pointer): ptr cQJSManagedValue {.importc: "QJSManagedValue_new4".}
proc fcQJSManagedValue_new5(string: struct_miqt_string, engine: pointer): ptr cQJSManagedValue {.importc: "QJSManagedValue_new5".}
proc fcQJSManagedValue_delete(self: pointer) {.importc: "QJSManagedValue_delete".}

proc equals*(self: gen_qjsmanagedvalue_types.QJSManagedValue, other: gen_qjsmanagedvalue_types.QJSManagedValue): bool =
  fcQJSManagedValue_equals(self.h, other.h)

proc strictlyEquals*(self: gen_qjsmanagedvalue_types.QJSManagedValue, other: gen_qjsmanagedvalue_types.QJSManagedValue): bool =
  fcQJSManagedValue_strictlyEquals(self.h, other.h)

proc engine*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): gen_qjsengine_types.QJSEngine =
  gen_qjsengine_types.QJSEngine(h: fcQJSManagedValue_engine(self.h))

proc prototype*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): gen_qjsmanagedvalue_types.QJSManagedValue =
  gen_qjsmanagedvalue_types.QJSManagedValue(h: fcQJSManagedValue_prototype(self.h))

proc setPrototype*(self: gen_qjsmanagedvalue_types.QJSManagedValue, prototype: gen_qjsmanagedvalue_types.QJSManagedValue): void =
  fcQJSManagedValue_setPrototype(self.h, prototype.h)

proc typeX*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): cint =
  cint(fcQJSManagedValue_typeX(self.h))

proc isUndefined*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isUndefined(self.h)

proc isBoolean*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isBoolean(self.h)

proc isNumber*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isNumber(self.h)

proc isString*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isString(self.h)

proc isObject*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isObject(self.h)

proc isSymbol*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isSymbol(self.h)

proc isFunction*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isFunction(self.h)

proc isInteger*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isInteger(self.h)

proc isNull*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isNull(self.h)

proc isRegularExpression*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isRegularExpression(self.h)

proc isArray*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isArray(self.h)

proc isUrl*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isUrl(self.h)

proc isVariant*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isVariant(self.h)

proc isQObject*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isQObject(self.h)

proc isQMetaObject*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isQMetaObject(self.h)

proc isDate*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isDate(self.h)

proc isError*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isError(self.h)

proc isJsMetaType*(self: gen_qjsmanagedvalue_types.QJSManagedValue, ): bool =
  fcQJSManagedValue_isJsMetaType(self.h)
